--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,51 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+###########################################
+# ignore for react                        #
+###########################################
+/client/node_modules/
+client/.pnp
+client/.pnp.js
 
 # testing
-/coverage
+client/coverage
 
 # production
-/build
+client/build
 
-# misc
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
+
+
+###########################################
+# ignore for rails                        #
+###########################################
+# Ignore bundler config.
+server/.bundle
+
+# Ignore all logfiles and tempfiles.
+server/log/*
+server/tmp/*
+!/log/.keep
+!/tmp/.keep
+
+
+server/node_modules
+server/yarn-error.log
+
+server/public/assets
+server/.byebug_history
+
+# Ignore master key for decrypting credentials and more.
+server/config/master.key
+
+###########################################
+# misc                                    #
+###########################################
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
