--- a/server/Gemfile
+++ b/server/Gemfile
@@ -27,6 +27,8 @@ gem 'bcrypt', '~> 3.1.7'
 
 gem 'rack-cors'
 
+gem 'active_model_serializers', '~> 0.10.12'
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
