--- a/server/Gemfile
+++ b/server/Gemfile
@@ -25,6 +25,8 @@ gem 'jbuilder', '~> 2.5'
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
 
+gem "jwt"
+
 gem 'rack-cors'
 
 gem 'active_model_serializers', '~> 0.10.12'
